--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
       "angular": "github:angular/bower-angular@^1.5.7",
       "angular-material": "github:angular/bower-material@^1.0.9",
       "angular-route": "github:angular/bower-angular-route@^1.5.7",
-      "lodash-node": "npm:lodash-node@^3.10.2"
+      "lodash/lodash": "github:lodash/lodash@^4.13.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
+    },
+    "buildConfig": {
+      "transpileES6": true,
+      "minify": false
     }
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
   },
   "scripts": {
     "postinstall": "jspm install",
-    "dev": "jspm bundle src/main --inject --watch && jspm-server"
+    "dev": "jspm unbundle && jspm bundle-sfx src/bootstrap app.js && jspm-server",
+    "production": "jspm bundle src/bootstrap --inject --minify && jspm-server"
   }
 }
