--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "devDependencies": {
     "jscs": "^3.0.6",
     "jshint": "^2.9.2",
-    "jspm": "^0.16.39"
+    "jspm": "^0.16.39",
+    "jspm-server": "^1.0.1"
   },
   "scripts": {
     "postinstall": "jspm install",
